--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 </section>
 <!-------------------FOOTER------------------------->
 <section class="footer">
-    <h4>About Us</h4>
+    <h4><a href="about-me">About me</a></h4>
     <p>We are one of the largest, most diverse universities in the UK with over 120,000 students in London,<br>and a further 50,000 studying across 190 countries for a University of IDK degree.Want to know more about <a href="Ictu-International-Programme.html">ICTU International Programme.</a></p>
     <div class="icons">
         <i class="fa fa-facebook"></i>
