--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
             <h3>ICTU delegation paid a visit to Kyungpook University</h3>
             <p>From October 17 to 20, 2018, ICTU delegation led by Dr. Vu Duc Thai – Vice Rector visited and worked at the two partner educational institutions in South Korea namely Kyungpook National University (KNU) and Gumi University (GU). These two partners signed a memorandum of understanding with ICTU in August 2018 to promote international cooperation in training and exchange of lecturers and students.</p>
             <a href="Ictu-International-Programme.html" class="hero-btn red-btn"> EXPLORE MORE!</a>
-            <a href="About-me.html" class="hero-btn blue-btn">About Me</a>
+            <a href="about-me.html" class="hero-btn blue-btn">About Me</a>
         </div>
         <div class="about-col">
             <img src="images/about.jpg">
